# AI-Brain_Supabase

./: .env  .env.bak  .env.example  .gitignore  CHANGELOG.md  README-Official.md  README.md  docker-compose.yml  pyproject.toml  supabase.sh  test-official.sh  uv-example.py
backup-20250902_171218/: .env
backup-20250902_171218/old-scripts/: reset-db.sh  setup-docker.sh  start-docker.sh  stop-docker.sh
backup-20250902_171218/volumes/db/init/: 01-rag-schema.sql
client/: README.md  __init__.py  cli.py  client.py  config.py  database.py
client/domain/: __init__.py  resources.py  search.py
scripts/: backup.sh  reset.sh  setup.sh  start-official.sh  start.sh  stop-official.sh  stop.sh
sql/: init_schema.sql
supabase/: config.toml  seed.sql
supabase/migrations/: 20250901132209_rag_system_init.sql
volumes/db/: 01-rag-schema.sql
