[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["client"]

[project]
name = "statementdog-supabase"
version = "1.0.0"
description = "Supabase local self-hosting client for StatementDog RAG system"
requires-python = ">=3.11"
dependencies = [
    # Supabase 客戶端 (最新版)
    "supabase>=2.18.0",
    
    # 資料庫 ORM 和驅動 (最新版)
    "sqlalchemy>=2.0.43",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.16.0",
    
    # pgvector 向量搜索 (支援最新功能)
    "pgvector>=0.4.0",
    
    # 資料處理與驗證 (最新版)
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    
    # HTTP 和工具庫
    "requests>=2.32.0",
    "python-dateutil>=2.9.0",
    "click>=8.1.0",
    "toml>=0.10.2",
    
    # 測試工具 (穩定版本)
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-asyncio>=0.23.0,<0.25.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "responses>=0.24.0,<0.26.0",
    "faker>=37.0.0,<38.0.0",
    
    # 程式碼品質 (最新版)
    "black>=24.0.0",
    "ruff>=0.12.0",
]

[project.optional-dependencies]
monitoring = [
    # 監控和管理工具 (穩定版)
    "rich>=13.7.0,<14.0.0",
    "typer>=0.12.0,<0.16.0",
    "httpx>=0.27.0,<0.29.0",
    "pandas>=2.2.0,<2.4.0",  # 用於資料分析
]
dev = [
    # 開發工具 (穩定版)
    "ipython>=8.18.0,<9.5.0",
    "jupyter>=1.0.0,<1.2.0",
    "pre-commit>=3.5.0,<4.1.0",
    "notebook>=7.0.0,<8.0.0",
]
ai = [
    # AI 和嵌入功能 (穩定版本，避免衝突)
    "openai>=1.100.0",
    "anthropic>=0.64.0,<0.65.0",  # 使用穩定版本
    "sentence-transformers>=2.7.0,<3.0.0",  # 穩定版本
    "numpy>=1.24.0,<2.0.0",  # 避免 numpy 2.x 相容性問題
    "torch>=2.0.0,<2.6.0",  # sentence-transformers 相容版本
    "transformers>=4.40.0",  # sentence-transformers 依賴
]

[project.scripts]
supabase-cli = "client.cli:main"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T10", "T20"]
ignore = ["E501", "S101", "S608"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S", "B"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=client --cov-report=term-missing"

[tool.coverage.run]
source = ["client"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# UV 特定配置
[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "mypy>=1.17.0",
    "types-requests>=2.32.0",
    "types-psycopg2>=2.9.0",
    "types-click>=7.1.0",
]

# 新增：效能和相容性設定
# 移除自定義 PyTorch 索引以避免衝突